--- a/css/book.css
+++ b/css/book.css
@@ -6,8 +6,8 @@
 
 }
 #header{
-    background-color: black;
-    color:yellow;
+    /*background-color: black;*/
+    color:black;
     /*background-color: #FFFF99;*/
     text-align:center;
     padding:1px
@@ -26,7 +26,7 @@
 
 #navitem{
 	text-decoration: blink;
-	color:red;
+	color:black;
 }
 
 #section {
